Fix: panel blocking Google logo on mobile

--- a/src/components/panel.css
+++ b/src/components/panel.css
@@ -39,6 +39,7 @@
   background: #0633ff;
   color: white;
   padding-left: 4px;
+  padding-top: 2px;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
 }
@@ -62,9 +63,9 @@
     font-size: 16px;
   }
   .panel {
-    bottom: 10px;
+    bottom: 15px;
     left: 0;
-    width: 150;
+    width: 200px;
   }
   .search_bar_cur_location {
     font-size: 12px;
